* fix(server) #5470: answer a failed batch load at once, instead of after the rest of the upload
POST /api/v1/batch reached an exact verdict on a bad payload and then could not deliver it. On the reported
25M-line load an edge named a vertex the file never created, the server diagnosed it precisely in two
minutes - "Unknown temporary ID '...' at line 25124852" - and the client was told nothing for fifteen
minutes, after which the status could no longer be set at all (UT000002: The response has already been
started). From the outside: a load that hangs and dies without a reason.

The wait was closing the request stream. UndertowInputStream.close() loops until the request body is
finished, so the try-with-resources read the remaining upload to the end before the error was ever
surfaced. Nothing needs those bytes - the failing record has already been read, and no later byte can make
it valid. Undertow owns the stream and closes it when the exchange ends, so the handler no longer closes it
at all: it marks the connection non-persistent, which makes terminateRequestChannel close the read side
before endExchange touches the stream. The response is written first. A body that WAS read to the end keeps
its connection reusable, so an ordinary load sees no change.

Two related corrections:

- the truncation check is consulted only for a record that failed to PARSE. It exists because a departed
  peer can leave Undertow's buffer holding bytes the client never sent, which surfaces as a malformed
  record - but it was applied to every client-input failure, so a well-formed record with invalid content
  was reported as "the last record read is not part of the payload", about a line that was in the file and
  was exactly what the user needed to fix. MalformedBatchRecordException now marks the ambiguous cases
  (unparseable JSON, a short CSV row); a bad reference or a misordered record is final and answered at once.
- the check never blocks. It establishes truncation from the end of